ckad/lightning-lab-2/4/ingress-vh-routing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-vh-routing
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx-example
  rules:
  - host: watch.ecom-store.com # because 30093 is the port used by the ingress controller
    http:
      paths:
        - path: /video
          pathType: Prefix
          backend:
            service:
              name: video-service
              port:
                number: 8080 # do kubectl get svc
  - host: apparels.ecom-store.com
    http:
      paths:
        - path: /wear
          pathType: Prefix
          backend:
            service:
              name: apparels-service
              port:
                number: 8080
